--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -221,3 +221,39 @@ h2{
 .mainArea h2{
   font-size: x-large
 }
+
+.compose-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  background-color: #5f5f5f;
+  z-index: 1000; /* Ensure it's above other elements */
+  width: 500px; /* Adjust width as needed */
+}
+
+.compose-modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999; /* Ensure it's below the modal */
+}
+
+.compose-modal button {
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin: 0 10px;
+  padding: 0 10px;
+  border-width: thin;
+  border-radius: 6px;
+}
+
+.compose-modal button:hover {
+  opacity: 0.9;
+}
