--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -153,7 +153,7 @@ h1 {
 .btn-primary-dark:hover {
   color: #e1e1e1;
 }
-.alert-danger {
+.alert-error {
   color: #ee8277;
   background-color: #74261e;
   border-color: #8b2e24;
